Assets/Plugins/iOS/arsdk.framework/Headers/ModelManager.h

    /**
     * @brief 初始化模板管理器,
     *        如果已经初始化过, 则会清空上次初始化
     *
     * @return 0: 成功, 其他: 失败
     */
    ARSDK_API int initModelManager(void);
    /**
     * @brief 根据@FileNameOfXML中的描述，从FileNameOfXML.dat中加载相关信息
     *
     * @param FileNameOfXML   xml文件完整路径
     * @param type            文件类型，见Format.h中alvaft
     *
     * @return 0: 成功, 其他: 失败
     *
     * @note 此函数添加时间过长，不建议在主线程中添加
     *       如果在子线程中添加，需要主线程等待此函数运行结果返回成功再继续流程
     * @note 部分错误码如下：
     *       0x8007A80E: 打包工具版本不兼容
     *       0x8009A80E: 数据包版本不兼容
     */
    ARSDK_API int addModel(char* FileNameOfXML, int type);
    /**
     * @brief 删除库号为@modelIndex的model
     * @param modelIndex model的序号
     * @return 0: 成功, 其他: 失败
     */
    ARSDK_API int removeModel(int modelIndex);
    /**
     * @brief 删除最所有Model
     * @return 0: 成功, 其他: 失败
     */
    ARSDK_API int cleanModel(void);
    /**
     * @brief 查询model总个数
     * @return model总个数
     */
    ARSDK_API int getModelNumber(void);