Assets/AlvaAR/arsdk/AlvaARNativeWrapper.cs


        /**
         * @brief 获取一帧将用于渲染的图像数据
         * @param data 输出图像缓冲区指针, 内存由调用者管理
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int IR_GetBackGroundData(byte[] data);


        /**
     * @brief 获取跟踪到模板的数量@oFoundNum和序号列表@oFoundIndexs
     * @param oFoundNum    输出, 跟踪到的模板数量
     * @param oFoundIndexs 输出, 跟踪到的模板序号列表
     *                     空间不小于getTrackableNumber() * sizeof(int)
     */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getFoundNumIndexs(int[] oFoundNum, int[] oFoundIndexs);

        /**
     * @brief 查询@trackable的姿态@rts
     * @param trackable Trackable指针
     * @param rts       输出, @trackable的姿态
     *                  格式:
     *                      q1 q2 q3 q4 t1 t2 t3 s1 s2 s3
     * @return 0: 成功, 其他: 失败
     
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getTrackerRTS(long trackable, float[] rts);
        */

        /**
     * @brief 查询@trackable的姿态矩阵@matrix
     * @param trackable Trackable指针
     * @param matrix    输出, @trackable的姿态矩阵
     *                  格式:
     *                      m11 m12 m13 m14
     *                      m21 m22 m23 m24
     *                      m31 m32 m33 m34
     *                      m41 m42 m43 m44
     * @return 0: 成功, 其他: 失败
     */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getTrackerPoseMatrix(long trackable, float[] matrix);

        /**
         * @brief 释放资源
         *
         * @note 此函数调用后, 需要重新调用IR_init进行初始化后,
         *       才可调用其他函数
         *
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int IR_unit();

        /**
         * TrackerManager
         * 初始化，如果已经初始化过，则应该清空
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int initTrackerManager();


        /**
         * add
         * 根据FileNameOfXML中的描述，从FileNameOfXML.dat中加载tracker
         * @FileNameOfXML: xml文件完整路径
         * @type: 见TrackSourceType
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int addTrackable(string FileNameOfXML, int type);

        /**
         * getNumber
         * 查询目前Tracker的数量
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getTrackableNumber();

        /**
         * getByName
         * 获取名为nameofTracker的Trackable
         * @return: ptr of Trackable
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern IntPtr getTrackableByName(StringBuilder nameofTracker);

        /**
         * getByIndex
         * 获取序号为index的Trackable
         * @return: ptr of Trackable
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern IntPtr getTrackableByIndex(int index);

        /**
         * getFoundTrackerID
         * 查找找到的Tracker的ID，仅在ImageSearch的时候可用
         * @return: -1:未找到任务Tracker, 其他：tracker的ID
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int foundTracker();

        //[DllImport("arsdk")]
        //private static extern void resetTrackerResult();

        /*
         * resetTrackResult
         * 清除Tracker的查找结果, 所有Tracker的都重置为未找到状态
         * 注：此函数只有在明确需要重置之前查找结果的情况下使用
         * 例如
         *      在有查找结果后，明确在一段时间未进行输入图像查找，
         *      又在未重新初始化的情况，需要重新输入图像进行查找，
         *      此时在重新输入图像前需要调用此函数清理查找结果
         */
        //public void resetTrackResult()
        //{
        //resetTrackerResult();
        //}

        /*
            * Clean
            * 清空模板数据
            * @return: 0
            */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int cleanTrackable();

        /**
         * unit
         * 释放环境
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int unitTrackerManager();

#if UNITY_IPHONE
        [DllImport("__Internal", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("arsdk", CallingConvention = CallingConvention.Cdecl)]
#endif
        internal static extern void setOnSearchDone(SearchDoneClient.SearchDoneListener listener);

        #endregion IR Interface---------

        #region MT interface---------
        /**
         * @brief 初始化不因图像数据变化而变化的功能
         * @param companyName 授权的公司名
         * @param authString  授权码
         * @return 0: 成功，其他：失败
         *
         * @note 在Android平台，调用此函数时需要具有android.permission.READ_PHONE_STATE权限
         *
         * @note 部分错误码:
         *            0x80012001:
         *            0x80012001: Authorize code is not correct.
         *            0x80032001: Authorize code is not for @companyName.
         *            0x80042001: Authorize code is not for current package.
         *            0x80052001:
         *            0x80062001: Authorize code is not for this machine.
         *            0x80072001: System time is not correct.
         *            0x80082001: Trying period is over.
         *            0x80092001: Authorize code is not for this app.
         *            0x800A2001: Authorize code is not for this app's module.
         *
         * Android:(以下为权限错误)
         *            0x8EFF2001: 无android.permission.READ_PHONE_STATE权限
         *
         * Android:(以下错误码为获取IMEI错误)
         *            0x8E012001:
         *            0x8E022001:
         *            ...
         *            0x8E1F2001:
         * Windows:(以下错误码为获取MAC错误)
         *            0x80E12001:
         *            0x80E22001:
         *            0x80E32001:
         * Linux:(以下错误码为获取MAC错误)
         *            0x80E12001:
         *            0x80E22001:
         *
         * @note 在Linux平台上请确保授权用的MAC地址对应的网卡名为"eth0"
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int MT_init(string companyName, string authString);

        /**
             * @brief 设置相机信息
             * @param iw            图像的宽度, 同@MT_setDataInfoMemory的@wid
             * @param ih            图像的高度, 同@MT_setDataInfoMemory的@hei
             * @param fx            焦距x
             * @param fy            焦距y
             * @param cx            投影中心x
             * @param cy            投影中心y
             * @param screenW       屏幕宽度
             * @param screenH       屏幕高度
             * @param projectMatrix 投影矩阵
             * @return 0: 成功, 其他: 失败
             */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int MT_SetCameraInfo(float iw, float ih, float fx, float fy, float cx, float cy, int screenW, int screenH, int rotation);

        /**
         * @brief 设置图像信息
         * @param wid 图像的宽度, 同@MT_SetCameraInfo的@iw
         * @param hei 图像的高度, 同@MT_SetCameraInfo的@ih
         * @param fmt 图像格式, 见@alvafmt, 目前仅支持Alva_FMT_YUV_420p
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int MT_setDataInfoMemory(int wid, int hei, int fmt);

        /**
     * @brief 为识别核心更新一帧图像及数据
     * @param data              输入数据指针
     * @param dataMatrix_CMO    数据的位姿, 格式如下:(横屏时为单位阵，竖屏m11和m22为-1)
     *                          m11 m12 m13 m14
     *                          m21 m22 m23 m24
     *                          m31 m32 m33 m34
     *                          m41 m42 m43 m44
     * @param viewMatrix_CMO    摄像头的视角矩阵, 格式如下:
     *                          m11 m12 m13 m14
     *                          m21 m22 m23 m24
     *                          m31 m32 m33 m34
     *                          m41 m42 m43 m44
     * @param anchorMatrix_CMO  锚点的模型矩阵, 格式如下:
     *                          m11 m12 m13 m14
     *                          m21 m22 m23 m24
     *                          m31 m32 m33 m34
     *                          m41 m42 m43 m44
     * @param camStatus         相机状态, 见@alvacs
     * @param anchorIndex       锚点索引, (在前一个锚点索引基础上增加1，初始索引为0，没有锚点时为-1)
     * @param anchorStatus      锚点状态, 见@alvacs
     * @return 0: 成功, 其他: 失败
     */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern  int MT_Memory(byte[] data,  float[] viewMatrix_CMO, float[] anchorMatrix_CMO, int camStatus, int anchorIndex, int anchorStatus);

#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int MT_MemoryChannel(IntPtr[] data, float[] viewMatrix_CMO, float[] anchorMatrix_CMO, int camStatus, int anchorIndex, int anchorStatus);

        /**
         * @brief 获取一帧将用于渲染的图像数据
         * @param data 输出图像缓冲区指针, 内存由调用者管理
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int MT_GetBackGroundData(IntPtr data);




#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int MT_GetBackGroundDataChannel(IntPtr[] data);





        /**
         * @brief 释放资源
         *
         * @note 此函数调用后, 需要重新调用MT_init进行初始化后,
         *       才可调用其他函数
         *
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int MT_unit();

        /**
         * @brief 在相机暂停、重启时清除内部缓存数据, 以消除残影
         *        应该在相机重启后第一次调用MT_Memory之前调用
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern void MT_CleanFrameData();


        /**
         * @brief 初始化模板管理器,
         *        如果已经初始化过, 则会清空上次初始化
         *
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int initModelManager();

        /**
         * @brief 从@modelPath加载模型
         * @param modelPath     gltf文件完整路径
         * @param configPath    config文件完整路径
         * @param type          文件类型，见Format.h中alvaft
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int addModel(string fileNameOfXML, int type);

        /**
         * @brief 删除库号为@modelIndex的model
         * @param modelIndex model的序号
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int removeModel(int modelIndex);

        /**
         * @brief 删除最所有Model
         * @return 0: 成功, 其他: 失败
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int cleanModel();

        /**
         * @brief 查询model总个数
         * @return model总个数
         */
#if UNITY_IPHONE
        [DllImport("__Internal")]
#else
        [DllImport("arsdk")]
#endif
        private static extern int getModelNumber();
